# TransferFile

./: .gitignore  Cargo.toml
public/: index.html  script.js  style.css  succes.html
src/: main.rs
